<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment"
    android:background="@color/black"
    >

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/black"
         >

         <androidx.constraintlayout.motion.widget.MotionLayout
             android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/home_top"
             app:layoutDescription="@xml/fragment_home_xml_constraintlayout2_scene">

             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/vector__2_" />

             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="30dp"
                 android:drawableEnd="@drawable/group_14"
                 android:fontFamily="@font/productsans"
                 android:text="Hello Ahmed"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />

             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="30dp"
                 android:fontFamily="@font/productsans"
                 android:text="@string/welcome"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textView" />
         </androidx.constraintlayout.motion.widget.MotionLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:orientation="horizontal"
             android:background="@color/black"
             >
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                android:layout_margin="5dp"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:background="@color/dark_gray"
                 >

                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/isolated" />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/productsans"
                     android:text="@string/tshirt"
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     android:layout_gravity="center"

               android:layout_marginBottom="10dp"
                     />
             </LinearLayout>

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_margin="5dp"
                 android:background="@color/dark_gray"
                 >

                 <ImageView

                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/hoddiemockup"

                     />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/productsans"
                     android:text="@string/hoodies"
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     android:layout_gravity="center"

                    android:layout_marginBottom="10dp"
                     />
             </LinearLayout>

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"

                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_margin="5dp"
                 android:background="@color/dark_gray"
                 >

                 <ImageView

                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"

                     app:srcCompat="@drawable/sticker_11" />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/productsans"
                     android:text="@string/stickers"
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     android:layout_gravity="center"
                     android:layout_marginBottom="10dp"


                     />
             </LinearLayout>
         </LinearLayout>

         <TextView

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/productsans"
             android:text="@string/special_offers"
             android:textColor="@color/white"
             android:textSize="21sp"
             />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/specialoffers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             tools:listitem="@layout/offer_item"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="horizontal"
             />
         <TextView

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/productsans"
             android:text="@string/newestitems"
             android:textColor="@color/white"
             android:textSize="21sp"
             />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/newestitems"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             tools:listitem="@layout/newest_item"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="horizontal"
             />
         <TextView

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/productsans"
             android:text="@string/newestcollections"
             android:textColor="@color/white"
             android:textSize="21sp"
             />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/newestcollections"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             tools:listitem="@layout/newest_collection"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

             />
     </LinearLayout>
 </ScrollView>

</FrameLayout>